# mtk

./: README.md  hooks.py  pyproject.toml  setup.py
mtk_property/: api_mtk_billing.py  hooks.py  modules.txt  setup.py
mtk_property/api/: permission.py
mtk_property/doctype/mtk_building/: mtk_building.json
mtk_property/doctype/mtk_expense/: mtk_expense.json  mtk_expense.py
mtk_property/doctype/mtk_monthly_bill/: mtk_monthly_bill.json
mtk_property/doctype/mtk_payment/: mtk_payment.json
mtk_property/doctype/mtk_resident/: mtk_resident.py
mtk_property/doctype/mtk_vehicle/: mtk_vehicle.json
mtk_property/fixtures/: dashboard_chart.json  number_card.json  workspace.json
mtk_property/mtk_property/dashboard_chart/kiracilar/: kiracilar.json
mtk_property/mtk_property/doctype/mtk_apartment/: mtk_apartment.json  mtk_apartment.py
mtk_property/mtk_property/doctype/mtk_block/: mtk_block.json  mtk_block.py
mtk_property/mtk_property/doctype/mtk_building/: mtk_building.py
mtk_property/mtk_property/doctype/mtk_maintenance_request/: mtk_maintenance_request.json  mtk_maintenance_request.py
mtk_property/mtk_property/doctype/mtk_monthly_bill/: mtk_monthly_bill.py
mtk_property/mtk_property/doctype/mtk_payment/: mtk_payment.py
mtk_property/mtk_property/doctype/mtk_resident/: mtk_resident.json
mtk_property/mtk_property/doctype/mtk_vehicle/: mtk_vehicle.py
mtk_property/public/css/: mtk_property.css
mtk_property/public/js/: mtk_property.js
mtk_property/workspace/mtk_property/: mtk_property.json
(+1 files in other folders)
